welcome.lessons.welcome.environment.Environment.scala.error
SourceCode:2: error: identifier expected but ']' found.
tab:Integer[] = { 1, 2, 3, 4, 5};
            ^SourceCode:2: error: ']' expected but ';' found.
tab:Integer[] = { 1, 2, 3, 4, 5};
                                ^