welcome.lessons.welcome.environment.Environment.scala.code
forward();
tab:Integer[] = { 1, 2, 3, 4, 5};
println tab(-1);